update project update swagger ui && update woker
